force-app/main/default/objects/Schedule__c/fields/Wednesday_Collection__c.field-meta.xml
<CustomField>
    <fullName>Wednesday_Collection__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Wednesday Collection</label>
    <type>Checkbox</type>
</CustomField>