force-app/main/default/objects/Schedule__c/fields/Week_Off__c.field-meta.xml
<CustomField>
    <fullName>Week_Off__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Week Off</label>
    <type>Checkbox</type>
</CustomField>