force-app/main/default/objects/Schedule__c/fields/WeekFrequency__c.field-meta.xml
<CustomField>
    <fullName>WeekFrequency__c</fullName>
    <label>Week Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>12</fullName>
            </value>
            <value>
                <fullName>26</fullName>
            </value>
            <value>
                <fullName>52</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>