force-app/main/default/objects/Schedule__c/fields/WTNProduct__c.field-meta.xml
<CustomField>
    <fullName>WTNProduct__c</fullName>
    <formula>TEXT(Supplier_Product__r.Product__r.WTN_Product__c)</formula>
    <label>WTN Product</label>
    <type>Text</type>
</CustomField>