force-app/main/default/objects/Schedule__c/fields/WtnWasteCategory__c.field-meta.xml
<CustomField>
    <fullName>WtnWasteCategory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>WTN Waste Category</label>
    <referenceTo>WTN_Waste_Category__c</referenceTo>
    <relationshipLabel>Collection Schedules</relationshipLabel>
    <relationshipName>CollectionSchedules</relationshipName>
    <type>Lookup</type>
</CustomField>