force-app/main/default/objects/Schedule__c/validationRules/CollectionQuantityValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>CollectionQuantityValidation</fullName>
    <active>true</active>
    <errorConditionFormula>Collection_Quantity__c &lt; 1</errorConditionFormula>
    <errorDisplayField>Collection_Quantity__c</errorDisplayField>
    <errorMessage>Collection Quantity Must Be 1 or More</errorMessage>
</ValidationRule>