force-app/main/default/objects/Schedule__c/validationRules/CollectionScheduleTimeValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>CollectionScheduleTimeValidation</fullName>
    <active>true</active>
    <description>Time must be in HH:MM format. E.g. 07:45</description>
    <errorConditionFormula>NOT(REGEX(Time__c,&quot;([01][0-9]|[2][0-3]):([0-5][0-9])&quot;))</errorConditionFormula>
    <errorDisplayField>Time__c</errorDisplayField>
    <errorMessage>Time must be in HH:MM format. E.g. 07:45</errorMessage>
</ValidationRule>