force-app/main/default/objects/Schedule__c/validationRules/Discount_or_Manual_Price.validationRule-meta.xml
<ValidationRule>
    <fullName>Discount_or_Manual_Price</fullName>
    <active>true</active>
    <description>You can have a &quot;Manual Price&quot; or Discount but not both.</description>
    <errorConditionFormula>AND(Enqix_Price__c &gt;= 0,
NOT(ISBLANK(TEXT(Discount_Type__c))))</errorConditionFormula>
    <errorMessage>You can have a &quot;Manual Price&quot; or Discount but not both.</errorMessage>
</ValidationRule>