force-app/main/default/objects/Schedule__c/validationRules/Do_not_edit_Days_after_creation.validationRule-meta.xml
<ValidationRule>
    <fullName>Do_not_edit_Days_after_creation</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(Days__c) &amp;&amp; !ISNEW()</errorConditionFormula>
    <errorDisplayField>Days__c</errorDisplayField>
    <errorMessage>The Days value can&apos;t be changed after creation</errorMessage>
</ValidationRule>