force-app/main/default/objects/Schedule__c/validationRules/Pb_Must_Not_Be_Null_If_Not_Standard_Prod.validationRule-meta.xml
<ValidationRule>
    <fullName>Pb_Must_Not_Be_Null_If_Not_Standard_Prod</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK(Price_Book__c) &amp;&amp; NOT(REGEX(Supplier_Product__r.Product__r.Enqix_Id__c,&quot;264|265|266|267&quot;)) &amp;&amp; $User.Username != &apos;integration@thefirstmile.co.uk&apos;</errorConditionFormula>
    <errorDisplayField>Price_Book__c</errorDisplayField>
    <errorMessage>Pricebook must not be null if the product isn&apos;t standard</errorMessage>
</ValidationRule>