force-app/main/default/objects/Schedule__c/validationRules/PreventUnauthorizedScheduleSuspension.validationRule-meta.xml
<ValidationRule>
    <fullName>PreventUnauthorizedScheduleSuspension</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISCHANGED(Collection_Suspended__c), NOT($Permission.AllowScheduleSuspension))</errorConditionFormula>
    <errorDisplayField>Collection_Suspended__c</errorDisplayField>
    <errorMessage>You do not have permission to manually suspend or unsuspend this schedule.</errorMessage>
</ValidationRule>