force-app/main/default/objects/Schedule__c/validationRules/Pricebook_Is_Not_Active.validationRule-meta.xml
<ValidationRule>
    <fullName>Pricebook_Is_Not_Active</fullName>
    <active>false</active>
    <errorConditionFormula>NOT( Price_Book__r.IsActive )</errorConditionFormula>
    <errorDisplayField>Price_Book__c</errorDisplayField>
    <errorMessage>You must select an Active Price Book.</errorMessage>
</ValidationRule>