force-app/main/default/objects/Schedule__c/validationRules/PricebookValidation_StandardProduct.validationRule-meta.xml
<ValidationRule>
    <fullName>PricebookValidation_StandardProduct</fullName>
    <active>true</active>
    <description>Price Book Must Be Null if standard product</description>
    <errorConditionFormula>NOT(ISBLANK(Price_Book__c)) &amp;&amp; REGEX(Supplier_Product__r.Product__r.Enqix_Id__c,&quot;264|265|266|267&quot;)</errorConditionFormula>
    <errorMessage>Price Book Must Be Null if standard product</errorMessage>
</ValidationRule>