force-app/main/default/objects/Schedule__c/validationRules/RequireReactivationDateInFuture.validationRule-meta.xml
<ValidationRule>
    <fullName>RequireReactivationDateInFuture</fullName>
    <active>false</active>
    <errorConditionFormula>Reactivation_Start_Date__c &lt;= Suspension_Start_Date__c</errorConditionFormula>
    <errorDisplayField>Reactivation_Start_Date__c</errorDisplayField>
    <errorMessage>Reactivation date should be after Suspension date.</errorMessage>
</ValidationRule>