force-app/main/default/objects/Schedule__c/validationRules/RequireSuspendAndReactivateDatesTogether.validationRule-meta.xml
<ValidationRule>
    <fullName>RequireSuspendAndReactivateDatesTogether</fullName>
    <active>true</active>
    <errorConditionFormula>OR(AND((NOT(ISBLANK(Suspension_Start_Date__c))), ISBLANK(Reactivation_Start_Date__c )),AND((NOT(ISBLANK( Reactivation_Start_Date__c ))), ISBLANK( Suspension_Start_Date__c )))</errorConditionFormula>
    <errorMessage>Both Suspension date &amp; Reactivation date should be provided together or empty.</errorMessage>
</ValidationRule>