force-app/main/default/objects/Schedule__c/validationRules/RequireSuspensionDateNotInPast.validationRule-meta.xml
<ValidationRule>
    <fullName>RequireSuspensionDateNotInPast</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISCHANGED(Suspension_Start_Date__c), 
Suspension_Start_Date__c &lt; Today()
)</errorConditionFormula>
    <errorDisplayField>Suspension_Start_Date__c</errorDisplayField>
    <errorMessage>Suspension date should be today or future.</errorMessage>
</ValidationRule>