force-app/main/default/objects/Schedule__c/validationRules/RestrictAdvanceBinSchedules.validationRule-meta.xml
<ValidationRule>
    <fullName>RestrictAdvanceBinSchedules</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK(TEXT(Location__r.Parent.MonthsInvoicedInAdvance__c))), Is_bin_collection__c,
ISCHANGED(Supplier__c), ISCHANGED(Supplier_Product__c),
ISCHANGED(Price_Book__c), ISCHANGED(Discount_Type__c), ISCHANGED(Enqix_Price__c))</errorConditionFormula>
    <errorMessage>Supplier, product &amp; price changes on bin schedules are not not allowed.</errorMessage>
</ValidationRule>