force-app/main/default/objects/Schedule__c/validationRules/RestrictLocation.validationRule-meta.xml
<ValidationRule>
    <fullName>RestrictLocation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISNEW(),
    OR(Location__r.RecordType.DeveloperName != &apos;Location&apos;, NOT(ISPICKVAL(Location__r.Enqix_Dead_Live__c, &apos;Live&apos;)))
   )</errorConditionFormula>
    <errorDisplayField>Location__c</errorDisplayField>
    <errorMessage>Collection allowed only on live locations.</errorMessage>
</ValidationRule>