force-app/main/default/objects/Schedule__c/validationRules/RestrictSuspensionOver90Days.validationRule-meta.xml
<ValidationRule>
    <fullName>RestrictSuspensionOver90Days</fullName>
    <active>true</active>
    <errorConditionFormula>(Reactivation_Start_Date__c - Suspension_Start_Date__c) &gt; 90</errorConditionFormula>
    <errorMessage>Suspension over 90 days not allowed, instead delete such collections.</errorMessage>
</ValidationRule>