force-app/main/default/objects/Schedule__c/validationRules/SubscribedProductTypeValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>SubscribedProductTypeValidation</fullName>
    <active>true</active>
    <description>Product Isn&apos;&apos;t a Collection Product</description>
    <errorConditionFormula>NOT(ISPICKVAL(Supplier_Product__r.Product__r.Product_Type__c, &quot;Collection&quot;))</errorConditionFormula>
    <errorMessage>Product Isn&apos;&apos;t a Collection Product</errorMessage>
</ValidationRule>