force-app/main/default/objects/Schedule__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Days__c</columns>
    <columns>Time__c</columns>
    <columns>Streams__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Is_bin_collection__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>