force-app/main/default/objects/Schedule__c/listViews/Inline_Editing_Template.listView-meta.xml
<ListView>
    <fullName>Inline_Editing_Template</fullName>
    <columns>Location__c</columns>
    <columns>NAME</columns>
    <columns>Collection_Quantity__c</columns>
    <columns>Supplier_Product_Name__c</columns>
    <columns>Time__c</columns>
    <columns>Days__c</columns>
    <columns>Supplier__c</columns>
    <columns>Po_Number_Supplier__c</columns>
    <columns>Collection_Suspended__c</columns>
    <columns>End_Date__c</columns>
    <columns>Suspension_Start_Date__c</columns>
    <columns>Enqix_Price__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Location__c</field>
        <operation>contains</operation>
        <value>Elm Lodge</value>
    </filters>
    <label>Inline Editing Template</label>
</ListView>